# whisper.cpp_realtime_stream

examples/stream/: CMakeLists.txt  egosim_stream.cpp  fifo_mic_writer.py
